--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>체육 모듈수업 </title>
+    <title> 체육 모듈 수업 </title>
     <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Do+Hyeon&family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
 
@@ -50,14 +50,14 @@
         .result-desc { font-family: 'Noto Sans KR', sans-serif; font-size: 1.1rem; line-height: 1.8; color: #444; white-space: pre-line; background: #f9f9f9; padding: 15px; border-radius: 10px; }
         .summary-box { background: #ecf0f1; padding: 15px; border-radius: 10px; margin-bottom: 20px; font-size: 0.9rem; color: #555; }
 
-        /* 색상 띠 (7단계로 확장) */
+        /* 색상 띠 (7단계) */
         .step-0 { border-color: #E74C3C; } 
-        .step-1 { border-color: #D35400; } /* 상위움직임 (추가됨) */
+        .step-1 { border-color: #D35400; } 
         .step-2 { border-color: #F39C12; }
         .step-3 { border-color: #F1C40F; }
         .step-4 { border-color: #2ECC71; }
-        .step-5 { border-color: #3498DB; } /* 지향점 */
-        .step-6 { border-color: #9B59B6; } /* 활동내용 */
+        .step-5 { border-color: #3498DB; } 
+        .step-6 { border-color: #9B59B6; } 
 
         .reset-btn { display: block; width: 100%; max-width: 300px; margin: 30px auto; background: #34495e; color: white; padding: 15px; border: none; border-radius: 50px; font-size: 1.2rem; font-family: 'Do Hyeon', sans-serif; cursor: pointer; }
         @keyframes fadeIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
@@ -87,8 +87,7 @@
         let currentStep = 0;
         let userChoices = [];
 
-        // 🛠️ 2번째에 '상위움직임기술' 추가됨 (총 7단계 + 숨겨진 열 3개)
-        // 시트의 B열 제목을 반드시 '상위움직임기술' (띄어쓰기 없이)로 해주세요!
+        // 7단계 헤더 설정
         const headers = [
             "수업내용", 
             "상위움직임기술", 
@@ -102,11 +101,10 @@
             "지향점설명"
         ];
         
-        // 🛠️ 질문 목록 업데이트
         const questions = [
             "수업 주제를 골라주세요", 
-            "기본움직임 기술을 골라주세요.", // 2단계 질문 (요청하신 내용)
-            "움직임 세부 기술을 골라주세요", 
+            "기본움직임 기술을 골라주세요.", 
+            "세부움직임 기술을 골라주세요", 
             "움직임 요소를 골라주세요", 
             "영역을 골라주세요", 
             "지향점을 골라주세요", 
@@ -117,7 +115,6 @@
             download: true,
             header: true,
             complete: function(results) {
-                // 빈 줄 제거
                 allData = results.data.filter(item => item['수업내용'] && item['수업내용'].trim() !== "");
                 initApp();
             },
@@ -147,7 +144,6 @@
                 pathText.innerHTML = userChoices.map(c => `<span class='selected-item'>${c}</span>`).join(" <span class='arrow'>▶</span> ");
             }
 
-            // 7단계(구체적 활동)까지 마치면 결과 화면
             if (currentStep >= 7) { 
                 showResult();
                 return;
@@ -160,7 +156,15 @@
             helpBox.style.display = 'none';
 
             const currentColumnKey = headers[currentStep];
-            const options = [...new Set(filteredData.map(item => item[currentColumnKey]))];
+            
+            // 데이터 추출
+            let options = [...new Set(filteredData.map(item => item[currentColumnKey]))];
+
+            // ⭐ 정렬 기능 추가 (여기서 가나다/숫자 순으로 정렬합니다)
+            options.sort((a, b) => {
+                // 숫자가 섞여 있어도 자연스럽게 정렬 (예: 지향1, 지향2, 지향10 순서 보장)
+                return a.localeCompare(b, 'ko', { numeric: true });
+            });
 
             if (options.length === 0 || options[0] === undefined) {
                  area.innerHTML = `<p>데이터가 없습니다. (${currentColumnKey} 열을 확인하세요)</p><button class='reset-btn' onclick='initApp()'>다시 시작</button>`;
@@ -176,11 +180,12 @@
                 area.appendChild(btn);
             });
 
-            // ⭐ 교수학습지향점 도움말 (이제 6번째 단계이므로 인덱스는 5)
+            // 교수학습지향점 도움말 (6번째 단계, 인덱스 5)
             if (currentStep === 5) {
                 let helpHTML = `<span class="help-title">💡 ${questions[5]} 도움말</span>`;
                 let hasDescription = false;
 
+                // 정렬된 순서대로 설명도 보여줌
                 options.forEach(opt => {
                     const match = filteredData.find(item => item[headers[currentStep]] === opt);
                     if (match && match['지향점설명']) {
@@ -222,7 +227,6 @@
 
             let descHTML = finalData['상세설명'] ? finalData['상세설명'] : "상세 설명이 없습니다.";
 
-            // 6번 인덱스가 마지막 활동명
             resultArea.innerHTML = `
                 <div class="result-card">
                     <div class="result-title">${userChoices[6]}</div>
